--- a/index.html
+++ b/index.html
@@ -80,14 +80,19 @@
     </div>
 
     <script src="https://cdn.jsdelivr.net/npm/@splidejs/splide@latest/dist/js/splide.min.js"></script>
+    <script src="http://chancejs.com/chance.min.js"></script>
     <script>
         fetch("wordlist/wordlist.txt")
         .then(res => res.text())
         .then(txt => {
                 // load text data as array
                 let words = txt.split("\n");
-                // sort the array
-                words = words.sort((a, b) => 0.5 - Math.random());
+                // get the hash as a random number seed
+                const seed = location.hash.length > 0 ? location.hash : new String(new Date().getTime());
+                location.hash = seed;
+                const chance = new Chance(seed);
+                // shuffle the array using the potential seed
+                words = words.sort((a, b) => 0.5 - chance.random());
                 words.unshift("START &raquo;<div style='font-size:0.5rem'>einfach wischen</div>");
                 // prepare HTML
                 words = words.map(word => `<li class='splide__slide'><span>${word}</span></li>`);
