https for chance.hs

--- a/index.html
+++ b/index.html
@@ -80,7 +80,7 @@
     </div>
 
     <script src="https://cdn.jsdelivr.net/npm/@splidejs/splide@latest/dist/js/splide.min.js"></script>
-    <script src="http://chancejs.com/chance.min.js"></script>
+    <script src="https://chancejs.com/chance.min.js"></script>
     <script>
         fetch("wordlist/wordlist.txt")
         .then(res => res.text())
